<resources>
    <string name="app_name">TravX</string>
    <string name="google_maps_key">AIzaSyBQhcmDlyP01yNwTd4RTlatQIAJH3wJHw0</string>
    <string name="overview_image">Overview image</string>
    <string name="overview_title">Travel Overview</string>
    <string name="overview_add_content_description">Add action</string>
    <string name="overview_add_title">create trip</string>
    <string name="overview_image_content_description">Background image</string>
    <string name="journey_list_item_image">image</string>
    <string name="nothing_available">nothing available</string>
    <string name="create_journey_title">Add new Trip</string>
    <string name="create_journey_create_title">create trip</string>
    <string name="create_journey_details">TRIP DETAILS</string>
    <string name="create_journey_trip_name">Name</string>
    <string name="create_journey_friend">ADD FRIENDS</string>
    <string name="create_journey_trip_friend_add">add...</string>
    <string name="create_journey_trip_description">Description</string>
    <string name="create_journey_trip_budget">Budget</string>
    <string name="journey_add_billing">add billing</string>
    <string name="journey_delete_journey">delete trip</string>
    <string name="journey_details">TRIP DETAILS</string>
    <string name="journey_title">Trip</string>
    <string name="journey_view_name_label">NAME</string>
    <string name="journey_view_description_label">DESCRIPTION</string>
    <string name="journey_view_budget_label">BUDGET</string>
    <string name="journey_budget_name">2000</string>
    <string name="journey_budget_overview">BUDGET OVERVIEW</string>
    <string name="dash">-</string>
    <string name="journey_view_created_label">CREATED</string>
    <string name="journey_budget_used">USED BUDGET</string>
    <string name="journey_budget_max_bill">HIGHEST BILL</string>
    <string name="journey_budget_min_bill">LOWEST BILL</string>
    <string name="journey_budget_last_bill">LAST BILL</string>
    <string name="journey_budget_average">AVERAGE</string>
    <string name="journey_bill_list">Bills</string>
    <string name="journey_view_bills">view bills</string>
    <string name="bill_add">add bill</string>
    <string name="bill_photo">make picture</string>
    <string name="journey_bill_capture">Bill Capture</string>
    <string name="bill_capture">BILL PHOTO</string>
    <string name="bill_location_title">LOCATION</string>
    <string name="bill_title">Bill</string>
    <string name="bill_details">BILL DETAILS</string>
    <string name="bill_value_label">VALUE</string>
    <string name="bill_lat_label">LATITUDE</string>
    <string name="bill_lon_label">LONGITUDE</string>
</resources>