<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/view"
        android:contentDescription="@string/overview_add_content_description"
        android:icon="@drawable/ic_preview_24dp"
        android:title="@string/journey_view_bills"
        app:showAsAction="always" />

    <item
        android:id="@+id/remove"
        android:contentDescription="@string/overview_add_content_description"
        android:icon="@drawable/ic_remove_24dp"
        android:title="@string/journey_delete_journey"
        app:showAsAction="always" />

    <item
        android:id="@+id/add"
        android:contentDescription="@string/overview_add_content_description"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/journey_add_billing"
        app:showAsAction="always" />

</menu>