<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_close_24dp"
            app:title="@string/bill_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvTripDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/bill_details" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBillValueLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/bill_value_label" />

        <TextView
            android:id="@+id/tvBillValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBillLatLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/bill_lat_label" />

        <TextView
            android:id="@+id/tvBillLat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBillLonLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/bill_lon_label" />

        <TextView
            android:id="@+id/tvBillLon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBillCreatedLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/journey_view_created_label" />

        <TextView
            android:id="@+id/tvBillCreated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvBudgetOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/bill_location_title" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/billMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>