<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_advanced"
            app:navigationIcon="@drawable/ic_close_24dp"
            app:title="@string/journey_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvTripDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/journey_details" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJourneyNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/journey_view_name_label" />

        <TextView
            android:id="@+id/tvJourneyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJourneyDescriptionLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/journey_view_description_label" />

        <TextView
            android:id="@+id/tvJourneyDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJourneyBudgetLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/journey_view_budget_label" />

        <TextView
            android:id="@+id/tvJourneyBudget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJourneyCreatedLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/journey_view_created_label" />

        <TextView
            android:id="@+id/tvJourneyCreated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvBudgetOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/journey_budget_overview" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJourneyBudgetUsedLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/journey_budget_used" />

        <TextView
            android:id="@+id/tvJourneyBudgetUsed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJourneyBudgetMaxBillLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/journey_budget_max_bill" />

        <TextView
            android:id="@+id/tvJourneyBudgetMaxBill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJourneyBudgetMinBillLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/journey_budget_min_bill" />

        <TextView
            android:id="@+id/tvJourneyBudgetMinBill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJourneyBudgetAverageLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/journey_budget_average" />

        <TextView
            android:id="@+id/tvJourneyBudgetAverage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJourneyBudgetLastBillLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".30"
            android:text="@string/journey_budget_last_bill" />

        <TextView
            android:id="@+id/tvJourneyBudgetLastBill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight=".70"
            android:text="@string/dash" />

    </LinearLayout>

</LinearLayout>