<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/ic_close_24dp"
                app:title="@string/create_journey_title"

                />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/create_journey_details" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfTripName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_journey_trip_name"
            app:boxBackgroundColor="@color/colorPrimary"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:hintTextColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfTripDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_journey_trip_description"
            app:boxBackgroundColor="@color/colorPrimary"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:hintTextColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="30" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfTripBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_journey_trip_budget"
            app:boxBackgroundColor="@color/colorPrimary"
            app:endIconDrawable="@drawable/ic_euro_24dp_small"
            app:endIconMode="custom"
            app:hintTextColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>